[ES6 modules] Fix obsolete assertions and add missing bailout to FetchDescendants

This CL :
1. Removes oesolete assertions after
crrev.com/1f384078deab77be2de91aba7f04094e7b7c55ed [formerly e123c9108586cd8386edf8df90af739ce84ae3a4]

2. Adds missing !HasValidContext bailout in FetchDescendants

Bug: 732765, 594639
Change-Id: I806be731f528a1e8c1a2a9ac7f882dfaaf98e2ba
Reviewed-on: https://chromium-review.googlesource.com/535257
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Kouhei Ueno <kouhei@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479341}
Former-commit-id: 9b2b6a840fc7c88f5c46b5a32d8d844d778f35e4